--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					</div>
 					<div class="catalog-item sticker" id="2">
 						<div class="store-item">
-							<img src="img/cream&coffee.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+							<img src="img/Cream&coffee.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 						</div>
 						
 						<div class="price"><span class="price">380<small>/кг</small></span></div>
